DBT-217 fix layout issues
- remove copy of title attribute
- fix mir state badge style on metadata
- fix badge style on result list

--- a/src/main/less/common/mir_results.less
+++ b/src/main/less/common/mir_results.less
@@ -192,6 +192,10 @@
         float: left;
         margin-left: 5px;
       }
+      .hit_license {
+        float: left;
+        margin-left: 5px;
+      }
       .hit_type {
         float: left;
         color: @dark_neutral;
